Fixed odd menu behaviors on mobile

--- a/client/less/drawers.less
+++ b/client/less/drawers.less
@@ -60,6 +60,9 @@
       width: 100%;
       padding-top: 5px;
     }
+    @media (max-width: 720px) {
+      width: 100%;
+    }
 }
 
 .drawer-action-bar {
