--- a/client/less/map.less
+++ b/client/less/map.less
@@ -158,7 +158,6 @@
     width: 100%;
     top: 195px;
     bottom: 0;
-    margin: 0;
     // position:absolute;
     overflow-x: hidden;
     overflow-y: auto;
